[package]
name = "yum-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.0"
atoi = "1.0.0"
bytes = "1"
structopt = "0.3.14"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1.13"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = "0.3.9"
futures = "0.3.21"
